--- a/.github/workflows/deploy-clean.yml
+++ b/.github/workflows/deploy-clean.yml
@@ -34,6 +34,35 @@ jobs:
           </html>
           "@ | Out-File -FilePath "app_offline.htm" -Encoding UTF8
 
+          # اسکریپت FTP سازگار با Plesk
+          @"
+          open ftp.api.pardistous.ir
+          user ewan
+          mahan1384@
+          binary
+          put app_offline.htm
+          quit
+          "@ | Out-File -FilePath "ftp_stop.txt" -Encoding ASCII
+
+          ftp -s:ftp_stop.txt
+
+          Remove-Item ftp_stop.txt -ErrorAction SilentlyContinue
+          Remove-Item app_offline.htm -ErrorAction SilentlyContinue
+
+          Write-Host "⚠️ اگر لاگین موفق بوده باشد، app_offline.htm آپلود شده است." -ForegroundColor Yellow
+
+          Write-Host "🛑 Putting app_offline.htm to stop the app..." -ForegroundColor Yellow
+
+          # فایل maintenance
+          @"
+          <html>
+            <head><meta charset="utf-8" /></head>
+            <body style="font-family:tahoma;padding:40px">
+              <h2>سایت در حال بروزرسانی است...</h2>
+            </body>
+          </html>
+          "@ | Out-File -FilePath "app_offline.htm" -Encoding UTF8
+
           # اسکریپت FTP صحیح
           @"
           open ftp.api.pardistous.ir
