--- a/Endpoints/Api/web.config
+++ b/Endpoints/Api/web.config
@@ -13,6 +13,7 @@
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
           <environmentVariable name="ASPNETCORE_URLS" value="http://+:80" /><aspNetCore processPath="dotnet" arguments=".\Api.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" hostingModel="inprocess">
+          <!-- Connection String -->
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
           <environmentVariable name="ConnectionStrings__DefaultConnection"
                               value="Server=localhost;Database=pardisto_api;User Id=mahan;Password=ewan1384@;TrustServerCertificate=True;" />
